<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/nav_group_movies">
            <menu>
                <item android:title="@string/nav_item_movie_lists"
                    android:id="@+id/nav_item_menu_movies_lists"/>
                <item android:title="@string/nav_item_movie_watchlist"
                    android:id="@+id/nav_item_menu_movies_watchlist"/>
                <item android:title="@string/nav_item_movie_discover"
                    android:id="@+id/nav_item_menu_movies_discover"/>
                <item android:title="@string/nav_item_movie_upcoming"
                    android:id="@+id/nav_item_menu_movies_upcoming"/>
                <item android:title="@string/nav_item_movie_search"
                    android:id="@+id/nav_item_menu_movies_search"/>
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/nav_group_about"
            android:id="@+id/nav_item_menu_about">


        </item>
    </group>
</menu>